{
  "version": 4,
  "terraform_version": "1.2.4",
  "serial": 157,
  "lineage": "55161aff-be63-c2dd-a1bc-cab236195870",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a1362dec2a37ce81",
            "domain": "vpc",
            "id": "eipalloc-0a1362dec2a37ce81",
            "network_border_group": "ap-southeast-1",
            "public_dns": "ec2-18-140-171-88.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "18.140.171.88",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:972111001561:internet-gateway/igw-0fd23e2639c779a88",
            "id": "igw-0fd23e2639c779a88",
            "owner_id": "972111001561",
            "tags": {
              "Name": "Internet gateway"
            },
            "tags_all": {
              "Name": "Internet gateway"
            },
            "vpc_id": "vpc-0a2f1a8102ced7c6f"
          },
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a1362dec2a37ce81",
            "connectivity_type": "public",
            "id": "nat-0743a6f4b3ffcaecc",
            "network_interface_id": "eni-00294de11fd32e653",
            "private_ip": "10.0.1.245",
            "public_ip": "18.140.171.88",
            "subnet_id": "subnet-0ed8ab4a48a0ce153",
            "tags": {
              "Name": "NAT Gateway"
            },
            "tags_all": {
              "Name": "NAT Gateway"
            }
          },
          "dependencies": [
            "aws_eip.eip_nat_gw",
            "aws_subnet.public_subnet",
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "route_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-033d33a0d385793ad1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0743a6f4b3ffcaecc",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-033d33a0d385793ad",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip_nat_gw",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.route_table_private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "route_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0fd23e2639c779a88",
            "id": "r-rtb-08a6f473c2807663b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08a6f473c2807663b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.route_table_public_subnet",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:972111001561:route-table/rtb-033d33a0d385793ad",
            "id": "rtb-033d33a0d385793ad",
            "owner_id": "972111001561",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Route table private subnet"
            },
            "tags_all": {
              "Name": "Route table private subnet"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a2f1a8102ced7c6f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:972111001561:route-table/rtb-08a6f473c2807663b",
            "id": "rtb-08a6f473c2807663b",
            "owner_id": "972111001561",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Route table public subnet"
            },
            "tags_all": {
              "Name": "Route table public subnet"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a2f1a8102ced7c6f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_private_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "10.0.4.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08f9f46609f20cba7",
            "route_table_id": "rtb-033d33a0d385793ad",
            "subnet_id": "subnet-04f105b99b5141ef8"
          },
          "dependencies": [
            "aws_route_table.route_table_private_subnet",
            "aws_subnet.private_subnet",
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.az"
          ]
        },
        {
          "index_key": "10.0.5.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-049f3a247aa4341bd",
            "route_table_id": "rtb-033d33a0d385793ad",
            "subnet_id": "subnet-02df67bdd76425f76"
          },
          "dependencies": [
            "aws_route_table.route_table_private_subnet",
            "aws_subnet.private_subnet",
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.az"
          ]
        },
        {
          "index_key": "10.0.6.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-069063f582c3f7ab3",
            "route_table_id": "rtb-033d33a0d385793ad",
            "subnet_id": "subnet-063ac038cf04eac6d"
          },
          "dependencies": [
            "aws_route_table.route_table_private_subnet",
            "aws_subnet.private_subnet",
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_public_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "10.0.1.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06f6cc0f69b744d08",
            "route_table_id": "rtb-08a6f473c2807663b",
            "subnet_id": "subnet-0ed8ab4a48a0ce153"
          },
          "dependencies": [
            "aws_route_table.route_table_public_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.az"
          ]
        },
        {
          "index_key": "10.0.2.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0276431992ec947a6",
            "route_table_id": "rtb-08a6f473c2807663b",
            "subnet_id": "subnet-0fa6e644ba6a073db"
          },
          "dependencies": [
            "aws_route_table.route_table_public_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.az"
          ]
        },
        {
          "index_key": "10.0.3.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d41e9bd3041cd915",
            "route_table_id": "rtb-08a6f473c2807663b",
            "subnet_id": "subnet-0e634d47ae67056d5"
          },
          "dependencies": [
            "aws_route_table.route_table_public_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "10.0.4.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:972111001561:subnet/subnet-04f105b99b5141ef8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04f105b99b5141ef8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "972111001561",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "EKS private subnet 1"
            },
            "tags_all": {
              "Name": "EKS private subnet 1"
            },
            "vpc_id": "vpc-0a2f1a8102ced7c6f"
          },
          "dependencies": [
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.az"
          ]
        },
        {
          "index_key": "10.0.5.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:972111001561:subnet/subnet-02df67bdd76425f76",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02df67bdd76425f76",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "972111001561",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "EKS private subnet 2"
            },
            "tags_all": {
              "Name": "EKS private subnet 2"
            },
            "vpc_id": "vpc-0a2f1a8102ced7c6f"
          },
          "dependencies": [
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.az"
          ]
        },
        {
          "index_key": "10.0.6.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:972111001561:subnet/subnet-063ac038cf04eac6d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-063ac038cf04eac6d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "972111001561",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "EKS private subnet 3"
            },
            "tags_all": {
              "Name": "EKS private subnet 3"
            },
            "vpc_id": "vpc-0a2f1a8102ced7c6f"
          },
          "dependencies": [
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "10.0.1.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:972111001561:subnet/subnet-0ed8ab4a48a0ce153",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ed8ab4a48a0ce153",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "972111001561",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "EKS public subnet 1",
              "kubernetes.io/cluster/hiitfigure": "shared"
            },
            "tags_all": {
              "Name": "EKS public subnet 1",
              "kubernetes.io/cluster/hiitfigure": "shared"
            },
            "vpc_id": "vpc-0a2f1a8102ced7c6f"
          },
          "dependencies": [
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.az"
          ]
        },
        {
          "index_key": "10.0.2.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:972111001561:subnet/subnet-0fa6e644ba6a073db",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fa6e644ba6a073db",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "972111001561",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "EKS public subnet 2",
              "kubernetes.io/cluster/hiitfigure": "shared"
            },
            "tags_all": {
              "Name": "EKS public subnet 2",
              "kubernetes.io/cluster/hiitfigure": "shared"
            },
            "vpc_id": "vpc-0a2f1a8102ced7c6f"
          },
          "dependencies": [
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.az"
          ]
        },
        {
          "index_key": "10.0.3.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:972111001561:subnet/subnet-0e634d47ae67056d5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e634d47ae67056d5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "972111001561",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "EKS public subnet 3",
              "kubernetes.io/cluster/hiitfigure": "shared"
            },
            "tags_all": {
              "Name": "EKS public subnet 3",
              "kubernetes.io/cluster/hiitfigure": "shared"
            },
            "vpc_id": "vpc-0a2f1a8102ced7c6f"
          },
          "dependencies": [
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "eks_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:972111001561:vpc/vpc-0a2f1a8102ced7c6f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0139fb275487448a0",
            "default_route_table_id": "rtb-03d25af43ac101c6a",
            "default_security_group_id": "sg-01ee30bbf633a8133",
            "dhcp_options_id": "dopt-02ce063f3b5bf5533",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0a2f1a8102ced7c6f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03d25af43ac101c6a",
            "owner_id": "972111001561",
            "tags": {
              "Name": "EKS VPC"
            },
            "tags_all": {
              "Name": "EKS VPC"
            }
          }
        }
      ]
    }
  ]
}